--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -11,7 +11,8 @@
     "@yamlviz/core": "workspace:*",
     "@yamlviz/ui": "workspace:*",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "shiki": "^3.20.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
