refactor: replace shiki with highlight.js for smaller bundle
- Use highlight.js/lib/core and yaml only
- Reduces bundle size significantly
- GitHub light theme styling

--- a/packages/web-app/package.json
+++ b/packages/web-app/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@yamlviz/core": "workspace:*",
     "@yamlviz/ui": "workspace:*",
+    "highlight.js": "^11.11.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "shiki": "^3.20.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
