--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -12,6 +12,16 @@
         "command": "yamlviz.showGraph",
         "title": "Show Workflow Graph",
         "icon": "$(graph)"
+      },
+      {
+        "command": "yamlviz.validateWorkflow",
+        "title": "Validate Workflow",
+        "icon": "$(check)"
+      },
+      {
+        "command": "yamlviz.runWorkflow",
+        "title": "Run Workflow Locally",
+        "icon": "$(play)"
       }
     ],
     "menus": {
@@ -20,11 +30,31 @@
           "command": "yamlviz.showGraph",
           "when": "resourceExtname == .yaml",
           "group": "navigation"
+        },
+        {
+          "command": "yamlviz.validateWorkflow",
+          "when": "resourceExtname == .yaml",
+          "group": "navigation"
+        },
+        {
+          "command": "yamlviz.runWorkflow",
+          "when": "resourceExtname == .yaml",
+          "group": "navigation"
         }
       ],
       "editor/title": [
         {
           "command": "yamlviz.showGraph",
+          "when": "resourceExtname == .yaml",
+          "group": "navigation"
+        },
+        {
+          "command": "yamlviz.validateWorkflow",
+          "when": "resourceExtname == .yaml",
+          "group": "navigation"
+        },
+        {
+          "command": "yamlviz.runWorkflow",
           "when": "resourceExtname == .yaml",
           "group": "navigation"
         }
@@ -38,6 +68,7 @@
     "vscode": "^1.96.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "@types/vscode": "^1.96.0",
     "@vscode/vsce": "^3.2.1",
     "typescript": "^5.7.3"
